--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -95,7 +95,7 @@
                 </select>
               </div>
               <div class="col-md-3 col-xs-4">
-                <input class="form-control bd-element init-queries-field" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" pattern = "\d{4}" data-birthday="true" data-error="The birth year is required and must be in valid format" required />
+                <input class="form-control bd-element init-queries-field" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" pattern = "(19|20)\d{2}" data-birthday="true" data-error="The birth year is required and must be in valid format" required />
               </div>
             </div>
             <div class="help-block with-errors" style="margin-top: 1em; padding-left: 1em"></div>
