--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1015,11 +1015,16 @@ sub.pointer:hover {
   position: relative;
   top: -2px;
 }
-
 #profileConsentList {
   font-size: 0.95em;
   max-width: 100%;
   padding: 0.1em;
+}
+#profileConsentList a {
+  text-decoration:underline;
+}
+#profileConsentList a:hover {
+  color: #3c763d;
 }
 #profileConsentList .consentlist-header {
   background-color: #7d826e;
@@ -1030,10 +1035,14 @@ sub.pointer:hover {
 }
 #profileConsentList .consentlist-cell{
   background-color: #fbf9f9;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
+  padding-left: 0.6em;
+  padding-right: 0.6em;
 }
-
+.btn-delete-consent, .btn-add-consent {
+  color: #79815d;
+  font-size: 0.9em;
+  font-weight: bold;
+}
 #identityVerificationContainer {
   padding: 2em 1.5em;
   margin: 1em auto;
@@ -1174,7 +1183,7 @@ div.input-group.date {
   }
 
   #profileConsentList {
-    font-size: 0.7em;
+    font-size: 0.6em;
   }
 
   .create-account-container {
