--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -146,11 +146,11 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     font-size: 1em;
     padding: 0.5em 0.8em;
     background: #fff;
-    background-image: -webkit-linear-gradient(top, #fff, #eee);
-    background-image: -moz-linear-gradient(top, #fff, #eee);
-    background-image: -ms-linear-gradient(top, #fff, #eee);
-    background-image: -o-linear-gradient(top, #fff, #eee);
-    background-image: linear-gradient(to bottom, #fff, #eee);
+    background-image: -webkit-linear-gradient(top, #fff, #eee, #d4d4d4);
+    background-image: -moz-linear-gradient(top, #fff, #eee, #d4d4d4);
+    background-image: -ms-linear-gradient(top, #fff, #eee, #d4d4d4);
+    background-image: -o-linear-gradient(top, #fff, #eee, #d4d4d4);
+    background-image: linear-gradient(to bottom, #fff, #eee, #d4d4d4);
     -webkit-box-shadow: 1px 1px 1px 0px #777;
     -moz-box-shadow: 1px 1px 1px 0px #777;
     box-shadow: 1px 1px 1px 0px #777;
@@ -1305,7 +1305,7 @@ div.input-group.date {
     font-size: 0.7em;
   }
   #profileConsentList {
-    font-size: 0.6em;
+    font-size: 0.5em;
   }
   .create-account-container {
     padding: 3.5em 3em;
@@ -1353,6 +1353,10 @@ div.input-group.date {
 
   #userSessionReportDetailHeader span.glyphicon-user {
     padding: 0.4em;
+  }
+
+  button.btn-delete-consent {
+    padding: 2px;
   }
 
 }
