--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -162,7 +162,7 @@ $(document).ready(function(){
         targetField: $("#locale")
      },
      {
-        attachID: "genderGroup",
+        attachID: "profile-gender-list",
         targetField: $("input[name='sex']")
      },
      {
